--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ input {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
-    color: white;
+    background-color: #ff0000;
+    color: rgb(5, 5, 5);
     font-weight: bold;
     border: none;
     border-radius: 5px;
